--- a/package.json
+++ b/package.json
@@ -9,13 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5"
+    "@gluestack-ui/themed": "^1.1.62",
+    "@react-native-aria/focus": "^0.2.9",
+    "@react-native-aria/interactions": "^0.2.13",
+    "@react-native-aria/overlays": "^0.3.14",
+    "@react-native-community/slider": "4.5.5",
+    "@react-native-picker/picker": "^2.9.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "autoprefixer": "^10.4.20",
+    "expo": "~52.0.25",
+    "expo-camera": "~16.0.11",
+    "expo-location": "~18.0.5",
+    "expo-media-library": "~17.0.5",
+    "expo-sharing": "~13.0.1",
+    "expo-status-bar": "~2.0.1",
+    "jspdf": "^2.5.2",
+    "lucide-react": "^0.456.0",
+    "native-base": "^3.4.28",
+    "postcss": "^8.4.49",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.6",
+    "react-native-maps": "1.18.0",
+    "react-native-pdf": "^6.7.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.4.0",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.3.12",
+    "nativewind": "^2.0.11",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-safe-area-context": "^4.12.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
