--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "autoprefixer": "^10.4.20",
-    "expo": "~52.0.25",
-    "expo-camera": "~16.0.11",
-    "expo-location": "~18.0.5",
-    "expo-media-library": "~17.0.5",
+    "expo": "~52.0.41",
+    "expo-camera": "~16.0.18",
+    "expo-location": "~18.0.8",
+    "expo-media-library": "~17.0.6",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "jspdf": "^2.5.2",
@@ -31,9 +31,10 @@
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-native": "^0.76.6",
+    "react-native": "0.76.7",
     "react-native-maps": "1.18.0",
     "react-native-pdf": "^6.7.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.4.0",
     "react-native-svg": "15.8.0"
