--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "@gluestack-ui/themed": "^1.1.62",
     "@react-native-aria/focus": "^0.2.9",
     "@react-native-aria/interactions": "^0.2.13",
     "@react-native-aria/overlays": "^0.3.14",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.5",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.1.18",
@@ -21,7 +23,8 @@
     "autoprefixer": "^10.4.20",
     "expo": "~52.0.41",
     "expo-camera": "~16.0.18",
-    "expo-location": "~18.0.8",
+    "expo-file-system": "~18.0.12",
+    "expo-location": "~18.0.10",
     "expo-media-library": "~17.0.6",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
